complete demo app

--- a/index.html
+++ b/index.html
@@ -68,19 +68,21 @@
           <!-- Bar width -->
           <div class="row">
             <div class="col-md-2 col-xs-12 col-md-offset-1 description-text"><p>Bar Width</p></div>
-            <div class="col-md-7 col-xs-11 slider-container"><input id="bar-width" type="range" min="1" max="4" step="1" value="2" style="position: absolute; width: 1px; height: 1px; overflow: hidden; opacity: 0;"><div class="rangeslider" id="js-rangeslider-0"><div class="rangeslider__fill" style="width: 139.333px;"></div><div class="rangeslider__handle" style="left: 129.333px;"></div></div></div>
+            <div class="col-md-7 col-xs-11 slider-container">
+              <input id="bar-width" type="range" min="1" max="4" step="1" value="2" style="position: absolute; width: 1px; height: 1px; overflow: hidden; opacity: 0;">
+            </div>
             <div class="col-md-1 col-xs-1 value-text"><p><span id="bar-width-display">2</span></p></div>
           </div>
           <!-- Height -->
           <div class="row">
             <div class="col-md-2 col-xs-12 col-md-offset-1 description-text"><p>Height</p></div>
-            <div class="col-md-7 col-xs-11 slider-container"><input id="bar-height" type="range" min="10" max="150" step="5" value="100" style="position: absolute; width: 1px; height: 1px; overflow: hidden; opacity: 0;"><div class="rangeslider" id="js-rangeslider-1"><div class="rangeslider__fill" style="width: 259.429px;"></div><div class="rangeslider__handle" style="left: 249.429px;"></div></div></div>
+            <div class="col-md-7 col-xs-11 slider-container"><input id="bar-height" type="range" min="10" max="150" step="5" value="100" style="position: absolute; width: 1px; height: 1px; overflow: hidden; opacity: 0;"></div>
             <div class="col-md-1 col-xs-1 value-text"><p><span id="bar-height-display">100</span></p></div>
           </div>
           <!-- Margin -->
           <div class="row">
             <div class="col-md-2 col-xs-12 col-md-offset-1 description-text"><p>Margin</p></div>
-            <div class="col-md-7 col-xs-11 slider-container"><input id="bar-margin" type="range" min="0" max="25" step="1" value="10" style="position: absolute; width: 1px; height: 1px; overflow: hidden; opacity: 0;"><div class="rangeslider" id="js-rangeslider-2"><div class="rangeslider__fill" style="width: 165.2px;"></div><div class="rangeslider__handle" style="left: 155.2px;"></div></div></div>
+            <div class="col-md-7 col-xs-11 slider-container"><input id="bar-margin" type="range" min="0" max="25" step="1" value="10" style="position: absolute; width: 1px; height: 1px; overflow: hidden; opacity: 0;"></div>
             <div class="col-md-1 col-xs-1 value-text"><p><span id="bar-margin-display">10</span></p></div>
           </div>
           <!-- Background (color) -->
@@ -147,13 +149,13 @@
             <!-- Font size -->
             <div class="row">
               <div class="col-md-2 col-md-offset-1 col-xs-12 col-xs-offset-0 description-text"><p>Font Size</p></div>
-              <div class="col-md-7 col-xs-11 slider-container"><input id="bar-fontSize" type="range" min="8" max="36" step="1" value="20" style="position: absolute; width: 1px; height: 1px; overflow: hidden; opacity: 0;"><div class="rangeslider" id="js-rangeslider-3"><div class="rangeslider__fill" style="width: 176.286px;"></div><div class="rangeslider__handle" style="left: 166.286px;"></div></div></div>
+              <div class="col-md-7 col-xs-11 slider-container"><input id="bar-fontSize" type="range" min="8" max="36" step="1" value="20" style="position: absolute; width: 1px; height: 1px; overflow: hidden; opacity: 0;"></div>
               <div class="col-md-1 col-xs-1 value-text"><p><span id="bar-fontSize-display">20</span></p></div>
             </div>
             <!-- Text margin -->
             <div class="row">
               <div class="col-md-2 col-md-offset-1 col-xs-12 col-xs-offset-0 description-text"><p>Text Margin</p></div>
-              <div class="col-md-7 col-xs-11 slider-container"><input id="bar-text-margin" type="range" min="-15" max="40" step="1" value="0" style="position: absolute; width: 1px; height: 1px; overflow: hidden; opacity: 0;"><div class="rangeslider" id="js-rangeslider-4"><div class="rangeslider__fill" style="width: 115.818px;"></div><div class="rangeslider__handle" style="left: 105.818px;"></div></div></div>
+              <div class="col-md-7 col-xs-11 slider-container"><input id="bar-text-margin" type="range" min="-15" max="40" step="1" value="0" style="position: absolute; width: 1px; height: 1px; overflow: hidden; opacity: 0;"></div>
               <div class="col-md-1 col-xs-1 col-xs-11 value-text"><p><span id="bar-text-margin-display">0</span></p></div>
             </div>
           </div>
