complete bulk save for png, jpg and pdf

--- a/barcode-generator.html
+++ b/barcode-generator.html
@@ -94,13 +94,24 @@
                         </div>
                     </div>
                 </fieldset>
-                <div class="row">
+                <div class="">
                     <button id="btn-generate" type="button" class="btn btn-success btn-lg btn-block">Generate</button>
                 </div>
                 <br>
                 <hr>
+                <div id="bulk-save-container">
+                    <h3>Bulk Save</h3>
+                    <div style="text-align:left;padding:2rem">
+                        <span class="btn-download" id="btn-png-bulk">PNG</span>
+                        <span class="btn-download" id="btn-jpg-bulk">JPG</span>
+                        <span class="btn-download" id="btn-pdf-bulk">PDF</span>
+                        <span class="btn-download" id="btn-ai-bulk" >AI</span>
+                        <span class="btn-download" id="btn-eps-bulk">EPS</span>
+                        <br><br><hr>
+                    </div>
+                </div>
                 <div id="result-container">
-
+                    
                 </div>
             </div>
         </div>
