--- a/barcode-generator.html
+++ b/barcode-generator.html
@@ -17,6 +17,7 @@
         <script src="./assets/rangeslider.min.js"></script>
         <script src="./assets/jqColorPicker.min.js"></script>
         <script src="./assets/bootstrap.min.js"></script>
+        <script src="./assets/status-modal.js"></script>
         
         <script src="./assets/vendor/saveSvgAsPng.js"></script>
         <script src="./assets/barcode-generator.js"></script>
@@ -24,7 +25,8 @@
         <!-- <script src="./assets/vendor/jspdf.min.js"></script>
         <script src="./assets/vendor/svg2pdf.min.js"></script> -->
         <script src="https://raw.githack.com/eKoopmans/html2pdf/master/dist/html2pdf.bundle.js"></script>
-
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/canvg/1.5/canvg.min.js"></script>
         
         <script>if (window.module) module = window.module;</script>
     </head>
